# honsanam-reminder-bot

./: .env.example  .gitignore  README.md  pyproject.toml  reminders.toml
scripts/: install_launch_agent.sh  run_launchd_once.sh  setup.sh  uninstall_launch_agent.sh
skills/honsanam-reminder/: SKILL.md
skills/honsanam-reminder/agents/: openai.yaml
src/life_reminder/: __init__.py  cli.py  config.py  confirmations.py  interactions.py  mac_status.py  manager.py  messages.py  patterns.py  rules.py  schema.py  state.py  telegram.py
tests/: test_cli_management.py  test_config.py  test_confirmations.py  test_custom_rules.py  test_interactions.py  test_launchd_scripts.py  test_manager.py  test_rules.py  test_state.py  test_telegram.py
